--- a/.github/workflows/python-conda-ci.yml
+++ b/.github/workflows/python-conda-ci.yml
@@ -3,24 +3,25 @@ name: Continuous integration unit testing and lint
 on: [push]
 
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
+  build:
     strategy:
       matrix:
-        python-version: ["3.9"]
-      max-parallel: 5
+        python-version: ['3.10']
+        os: [ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+    - uses: conda-incubator/setup-miniconda@v2
       with:
+        auto-update-conda: true
         python-version: ${{ matrix.python-version }}
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
+        channels: defaults
     - name: Install dependencies
+      shell: bash -l {0}
       run: |
+        conda create --yes -n env_name python=${{ matrix.python-version }}
+        conda activate env_name
         conda install pandas
         pip install pyyaml
     - name: Lint with flake8
@@ -31,7 +32,10 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
+      shell: bash -l {0}
       run: |
+        conda activate env_name
         conda install pytest
+        which python
+        pip install -e . --no-deps
         pytest
-
