--- a/.github/workflows/python-conda-ci.yml
+++ b/.github/workflows/python-conda-ci.yml
@@ -26,6 +26,7 @@ jobs:
         pip install pyyaml
     - name: Lint with flake8
       run: |
+        conda activate env_name
         conda install flake8
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
