--- a/.github/workflows/python-conda-ci.yml
+++ b/.github/workflows/python-conda-ci.yml
@@ -9,6 +9,9 @@ jobs:
         python-version: ['3.10']
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash -el {0}
 
     steps:
     - uses: actions/checkout@v3
@@ -18,7 +21,6 @@ jobs:
         python-version: ${{ matrix.python-version }}
         channels: defaults
     - name: Install dependencies
-      shell: bash -l {0}
       run: |
         conda create --yes -n env_name python=${{ matrix.python-version }}
         conda activate env_name
@@ -33,7 +35,6 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
-      shell: bash -l {0}
       run: |
         conda activate env_name
         conda install pytest
